fix click on checkbox on mobile
fix click on checkbox on mobile

--- a/dropdowntree.css
+++ b/dropdowntree.css
@@ -1,6 +1,6 @@
 .dropdown-tree > ul{overflow-y: auto;overflow-x: hidden;white-space: nowrap;}
 .dropdown-tree li{list-style: none}
-.dropdown-tree li > i {margin-left: 10px;}
+.dropdown-tree li > i {margin-left: 10px;width: 20px;height: 20px;text-align: center;position: relative;z-index: 1;font-size: 20px;top: 3px;}
 .dropdown-tree li:hover{ background: #eee;}
 .dropdown-tree li:hover ul { background: white; }
 .dropdown-tree li:hover ul li:hover { background: #eee; } 
